--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -11,6 +11,9 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": false
   },
+  "[javascript]": {
+    "editor.defaultFormatter": "djpai.faster-format-with-cli"
+  },
   "[jinjaform]": {
     "djpai.format.command": "sed '/^$/N;/^\\n$/D' | sed -e 's/{%/#{%/g' | terraform fmt -write=false - | sed -e 's/#{%/{%/g'",
     "djpai.format.mode": "inline_stdin",
@@ -38,9 +41,7 @@
     "djpai.format.command": "cat \"{file}\"",
     "djpai.format.mode": "inline_file",
     "editor.defaultFormatter": "djpai.faster-format-with-cli",
-    "editor.formatOnSave": false,
-    "editor.unicodeHighlight.ambiguousCharacters": false,
-    "editor.unicodeHighlight.invisibleCharacters": false
+    "editor.formatOnSave": false
   },
   "[terraform]": {
     "djpai.format.command": "sed '/^$/N;/^\\n$/D' | terraform fmt -",
@@ -66,6 +67,7 @@
   "cSpell.enabled": false,
   "cSpell.ignoreWords": [],
   "cSpell.userWords": [],
+  "debug.inlineValues": "on",
   "diffEditor.ignoreTrimWhitespace": true,
   "diffEditor.useInlineViewWhenSpaceIsLimited": false,
   "djpai.format.command": "npx prettier --ignore-unknown \"{file}\"",
@@ -75,25 +77,44 @@
   "editor.fontFamily": "'JetBrainsMono Nerd Font Mono', Menlo, Monaco, 'Courier New', monospace",
   "editor.fontLigatures": true,
   "editor.fontSize": 12,
+  "editor.formatOnPaste": true,
   "editor.formatOnSave": true,
+  "editor.formatOnType": true,
   "editor.insertSpaces": true,
   "editor.lineHeight": 0,
   "editor.renderControlCharacters": true,
   "editor.stickyScroll.enabled": false,
   "editor.tabSize": 2,
   "editor.tokenColorCustomizations": {},
+  "editor.unicodeHighlight.ambiguousCharacters": true,
+  "editor.unicodeHighlight.invisibleCharacters": true,
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
   },
   "errorLens.enabled": false,
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
+  "explorer.fileNesting.patterns": {
+    "*.db": "${capture}.${extname}-*",
+    "*.db3": "${capture}.${extname}-*",
+    "*.js": "${capture}.js.map, ${capture}.min.js, ${capture}.d.ts",
+    "*.jsx": "${capture}.js",
+    "*.s3db": "${capture}.${extname}-*",
+    "*.sdb": "${capture}.${extname}-*",
+    "*.sqlite": "${capture}.${extname}-*",
+    "*.sqlite3": "${capture}.${extname}-*",
+    "*.ts": "${capture}.js",
+    "*.tsx": "${capture}.ts",
+    "package.json": "package-lock.json, yarn.lock, pnpm-lock.yaml, bun.lockb",
+    "tsconfig.json": "tsconfig.*.json"
+  },
   "extensions.ignoreRecommendations": true,
   "files.associations": {
     "*.j2": "jinjaform",
     ".env*": "env",
     "editor.foldingStrategy": "auto"
   },
+  "files.defaultLanguage": "${activeEditorLanguage}",
   "git.autofetch": true,
   "git.confirmSync": false,
   "git.enableSmartCommit": true,
@@ -142,16 +163,25 @@
       "forwardInclude": false
     }
   },
+  "sqltools.useNodeRuntime": true,
   "telemetry.telemetryLevel": "off",
   "terminal.integrated.enableMultiLinePasteWarning": "never",
   "terminal.integrated.fontFamily": "JetBrainsMono Nerd Font Mono",
   "terminal.integrated.fontSize": 13,
-  "terminal.integrated.stickyScroll.enabled": true,
   "terraform.languageServer.enable": true,
+  "window.newWindowDimensions": "maximized",
   "window.zoomLevel": -1,
   "workbench.activityBar.location": "top",
   "workbench.colorCustomizations": {},
   "workbench.colorTheme": "One Monokai",
+  // Add custom patterns for file names instead of static names
+  "workbench.editor.customLabels.patterns": {
+    "*/**/index.html": "${dirname}/",
+    "*/**/main.tf": "${dirname}/main",
+    "*/**/variables.tf": "${dirname}/vars",
+    "*/**/outputs.tf": "${dirname}/outputs"
+  },
   "workbench.iconTheme": "material-icon-theme",
+  "workbench.productIconTheme": "fluent-icons",
   "workbench.startupEditor": "none"
 }
